Fix: align text messages

--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -225,7 +225,7 @@
     }
 
     &__upgrade-level {
-      margin-left: 5%;
+      margin-left: 0;
     }
   }
 }
